--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <li><a href="3.html">javascript</a></li>
 </ol>
 </body>
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=zPnyLxKzzxAgyR3Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><frameborder="0" allowfullscreen=></iframe>
+</p>
+<p>
 <body>
 <h2>HTML</h2>
 <img src="index.jpg"width="100%">
@@ -21,6 +25,11 @@
 통상 오픈 소스 소프트웨어는 자유 소프트웨어와 비슷하지만, 자유 소프트웨어는 자유 소프트웨어 재단과 GNU 프로젝트와 관련된 소프트웨어에서 자유를 중시하는 의미에서 사용하고 오픈 소스 소프트웨어는 소스의 형태 자체를 중시하는 말이다.[4]
 
 Open Source Initiative(OSI)-opensource.org[5]는 공개 소스 정의(OSD)의 관리 및 촉진을 담당하는 비영리 조합이다. OSI가 인증하는 공개 소스 소프트웨어(OSS) 인증 마크를 통해 소프트웨어가 실제로 공개 소스라는 것을 증명하고, 공개 소스의 복제도 가능하다. 소프트웨어의 소스 코드를 자유롭게 읽고, 재배포 및 개조를 가능하게 함으로써 소프트웨어가 향상되고, 한 사람이 느린 속도로 소프트웨어를 개발하는 것보다 여러 사람들이 고치고 쓰고 버그를 개선하는 것이 보다 빠를 수 있다는 공개 소스의 기본 이념을 구현하는 단체이다.
+</p>
+
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=zPnyLxKzzxAgyR3Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</p>
 </body>
 </head>
 </html>
