--- a/3.html
+++ b/3.html
@@ -20,10 +20,46 @@
     <li><a href="3.html">javascript</a></li>
 </ol>
 </body>
+    <p>
 <body>
 <h2>javascript</h2>
 <img src="3.jpg" width="100%">
 <a href="https://www.ibm.com/kr-ko/topics/java"target="_blak" title="java">java</a> 노트북 컴퓨터, 모바일 디바이스, 게임 콘솔, 의료 장치 등을 포함한 수십억 개의 장치에서 실행되는, 널리 사용되는 객체 지향 프로그래밍 언어 및 소프트웨어 플랫폼입니다. Java의 규칙과 구문은 C 및 C++ 언어를 기반으로 합니다.
+    </p>
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://cyweb.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/637501fbb0d6371309cf6014/1gi0gvhbk';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </head>
 </html>
