--- a/index.html
+++ b/index.html
@@ -1,73 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>web1 - html</title>
+  <title>web1 - html</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBRX7JRK23"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XBRX7JRK23');
+  </script>
+</head>
 <body>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBRX7JRK23"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
 
-  gtag('config', 'G-XBRX7JRK23');
-</script>
-    <h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">css</a></li>
-    <li><a href="3.html">javascript</a></li>
-</ol>
-<p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=zPnyLxKzzxAgyR3Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><frameborder="0" allowfullscreen=></iframe>
-</p>
-<p>
+  <iframe 
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/7T7r_oSp0SE?si=zPnyLxKzzxAgyR3Y" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen>
+  </iframe>
 
-<h2>HTML</h2>
-<img src="index.jpg"width="100%">
-<a href="https://ko.wikipedia.org/wiki/%EC%98%A4%ED%94%88_%EC%86%8C%EC%8A%A4_%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4"target="_blank"title="index">오픈 소스 소프트웨어</a>(Open source software; OSS, 문화어: 공개원천소프트웨어)는 소스 코드를 공개해 누구나 특별한 제한 없이 그 코드를 보고 사용할 수 있는 오픈 소스 라이선스를 만족하는 소프트웨어를 말한다. 통상 간략하게 오픈 소스라고 말하기도 하며 대한민국의 공공기관에서는 공개 소프트웨어라는 표현을 사용한다.[1][2] (단, 저작권위원회에서는 오픈소스SW를 사용한다.[3])
+  <h2>HTML</h2>
+  <img src="index.jpg" alt="HTML 설명 이미지" width="100%">
+  
+  <p>
+    <!-- 내용 생략 -->
+  </p>
 
-오픈 소스 모델이나 다양한 독립 정보원의 협동 개발은 한 기업이 개발하거나 유지할 수 있는 것보다 훨씬 더 다양한 디자인 관점의 범위를 만든다. 2008년, Standish Group에 의한 리포트에 따르면 오픈 소스 소프트웨어 모델의 채택은 소비자에게 연간 600억 달러의 절약을 가능하게 한다고 한다.
+  <!-- Disqus -->
+  <div id="disqus_thread"></div>
+  <script>
+    (function() {
+      var d = document, s = d.createElement('script');
+      s.src = 'https://cyweb.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
 
-통상 오픈 소스 소프트웨어는 자유 소프트웨어와 비슷하지만, 자유 소프트웨어는 자유 소프트웨어 재단과 GNU 프로젝트와 관련된 소프트웨어에서 자유를 중시하는 의미에서 사용하고 오픈 소스 소프트웨어는 소스의 형태 자체를 중시하는 말이다.[4]
-
-Open Source Initiative(OSI)-opensource.org[5]는 공개 소스 정의(OSD)의 관리 및 촉진을 담당하는 비영리 조합이다. OSI가 인증하는 공개 소스 소프트웨어(OSS) 인증 마크를 통해 소프트웨어가 실제로 공개 소스라는 것을 증명하고, 공개 소스의 복제도 가능하다. 소프트웨어의 소스 코드를 자유롭게 읽고, 재배포 및 개조를 가능하게 함으로써 소프트웨어가 향상되고, 한 사람이 느린 속도로 소프트웨어를 개발하는 것보다 여러 사람들이 고치고 쓰고 버그를 개선하는 것이 보다 빠를 수 있다는 공개 소스의 기본 이념을 구현하는 단체이다.
-</p>
-
-<p>
-    <div id="disqus_thread"></div>
-    <script>
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-        /*
-        var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://cyweb.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
+  <!-- Tawk.to -->
+  <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/637501fbb0d6371309cf6014/1gi0gvhbk';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/637501fbb0d6371309cf6014/1gi0gvhbk';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+  </script>
 </body>
-</head>
 </html>
