--- a/3.html
+++ b/3.html
@@ -1,63 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>web1 - html</title>
-
-<body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>web1 - html</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XBRX7JRK23"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-XBRX7JRK23');
-</script>
-    <h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">css</a></li>
-    <li><a href="3.html">javascript</a></li>
-</ol>
-    <p>
-<h2>javascript</h2>
-<img src="3.jpg" width="100%">
-<a href="https://www.ibm.com/kr-ko/topics/java"target="_blak" title="java">java</a> 노트북 컴퓨터, 모바일 디바이스, 게임 콘솔, 의료 장치 등을 포함한 수십억 개의 장치에서 실행되는, 널리 사용되는 객체 지향 프로그래밍 언어 및 소프트웨어 플랫폼입니다. Java의 규칙과 구문은 C 및 C++ 언어를 기반으로 합니다.
-    </p>
-    <p>
-    <div id="disqus_thread"></div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBRX7JRK23"></script>
     <script>
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-        /*
-        var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://cyweb.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-XBRX7JRK23');
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/637501fbb0d6371309cf6014/1gi0gvhbk';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-</body>
 </head>
+<body>
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+        <li><a href="1.html">html</a></li>
+        <li><a href="2.html">css</a></li>
+        <li><a href="3.html">javascript</a></li>
+    </ol>
+
+    <h2>javascript</h2>
+    <img src="3.jpg" alt="JavaScript 설명 이미지" width="100%">
+    <p>
+        <a href="https://www.ibm.com/kr-ko/topics/java" target="_blank" title="java">Java</a>
+        노트북 컴퓨터, 모바일 디바이스, 게임 콘솔, 의료 장치 등을 포함한 수십억 개의 장치에서 실행되는, 
+        널리 사용되는 객체 지향 프로그래밍 언어 및 소프트웨어 플랫폼입니다. 
+        Java의 규칙과 구문은 C 및 C++ 언어를 기반으로 합니다.
+    </p>
+</body>
 </html>
